Port of Collapsed Topics accessible colours for the activity meta - https://github.com/gjb2048/moodle-format_topcoll/issues/88.

--- a/style/course.css
+++ b/style/course.css
@@ -836,12 +836,12 @@ div.fdescription.required {
 
 
 /* Activity further information styling */
-.activity-meta-container {
+.ad-activity-meta-container {
     padding: 5px 0 0 0;
     margin: 0px 10px 0 30px;
 }
 
-span.activity-due-date {
+.ad-activity-due-date {
     background-color: #555555;
     color: #ffffff;
     padding: 7px;
@@ -853,31 +853,57 @@ span.activity-due-date {
     white-space: nowrap;
 }
 
-span.activity-due-date a {
-    color: #ffffff !important;
- }
+.ad-activity-due-date a {
+    color: #fff;
+}
 
-span.activity-mod-feedback {
+.ad-activity-mod-feedback {
     padding: 5px 0;
 }
 
-span.activity-mod-feedback i {
+.ad-activity-mod-feedback i {
     font-size: 1.1em;
 }
 
-span.activity-date-overdue {
-    background-color: #ee0000;
+.ad-activity-action {
+    margin: 0 7px;
 }
 
-span.activity-date-submitted {
-    background-color: #00cc00;
+.ad-activity-action i {
+    margin-right: 0.35rem;
 }
 
-span.activity-date-nearly-due {
-    background-color: #f79100;
+.ad-activity-date-overdue {
+    background-color: #f8d7da;
 }
 
-span.activity-mod-feedback i, .activity-mod-engagement i, span.activity-due-date i {
+.ad-activity-date-overdue a {
+    color: #721c24;
+}
+
+.ad-activity-date-overdue .text-warning {
+    color: #721C24 !important;
+}
+
+.ad-activity-date-submitted {
+    background-color: #d4edda;
+}
+
+.ad-activity-date-submitted a {
+    color: #155724;
+}
+
+.ad-activity-date-nearly-due {
+    background-color: #fff3cd;
+}
+
+.ad-activity-date-nearly-due a {
+    color: #856404;
+}
+
+.ad-activity-mod-feedback i,
+.ad-activity-mod-engagement i,
+.ad-activity-due-date i {
     font-size: 1.1em;
 }
 
@@ -885,7 +911,7 @@ li.activity div.actions-right {
     float: right; padding: 5px;
 }
 
-div.activity-wrapper {
+.ad-activity-wrapper {
     margin: [[setting:coursesectionactivitymargintop]] 0 [[setting:coursesectionactivitymarginbottom]] 0;
     padding: 5px 10px 5px 0;
 }
